--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,9 @@ span {
     border-top: 1px solid hsla(0, 0%, 0%, 0.149);
 }
 
-.card__num h4 {
+.card__num span {
     font-weight: 900;
+    font-size: 1.2rem;
 }
 
 .card__num p {
