--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+h1 {
+    display: none;
+}
+
 body {
         font-family: 'Kumbh Sans',sans-serif;
         background-color: hsl(185, 75%, 39%);
